# django-template-partials

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Migration.md  README.md  pyproject.toml  tox.ini
.github/workflows/: package-tests.yml
src/template_partials/: __init__.py  apps.py  loader.py  test_runner.py
src/template_partials/templatetags/: partials.py
tests/: settings.py  tests.py
tests/templates/: child.html  debug.html  example.html  included.html  parent.html  test_partial_context.html
