[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-template-partials"
authors = [{name = "Carlton Gibson", email = "carlton.gibson@noumenal.es"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["Django"]

[project.urls]
Repository = "https://github.com/carltongibson/django-template-partials/"
# Docs = "https://noumenal.es/django-template-partials/"

[project.optional-dependencies]
docs = ["Sphinx"]
tests = ["coverage", "django_coverage_plugin"]

[tool.coverage.run]
plugins = ["django_coverage_plugin"]

[tool.flit.module]
name = "template_partials"
